--- a/04. A Better CSS - LESS and SASS/project/LESS/After/Form.html
+++ b/04. A Better CSS - LESS and SASS/project/LESS/After/Form.html
@@ -8,10 +8,10 @@
   <link rel="StyleSheet" 
         href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700s"
         type="text/css">
-  <link rel="stylesheet" 
+  <link rel="stylesheet/less" 
         href="css/my.less" 
         type="text/css">
-  <!--<script src="js/less-1.2.1.min.js" type="text/javascript"></script>-->
+  <script src="js/less-1.2.1.min.js" type="text/javascript"></script>
 </head>
 <body>
   <section id="container">
